bk_ida/gccida/g0/gen_formal_list_for_func_def
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_formal_list_for_func_def/src/c-aux-info.c:710:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *formal_decl; // [rsp+20h] [rbp-10h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_formal_list_for_func_def/src/c-aux-info.c:713:25: error: use of undeclared identifier 'ret_val'
formal_list = ( char *)&ret_val; 
                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_formal_list_for_func_def/src/obj/c-aux-info.o] Error 1
